<resources>
    <string name="app_name">Tez Prototip</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="tc_giriniz">TC giriniz</string>
    <string name="sifre_giriniz">Sifre Giriniz</string>
    <string name="giris">Giriş</string>
    <string name="kayit_ol">Kayıt Ol</string>
    <string name="isim_giriniz">İsim giriniz</string>
    <string name="soyad_giriniz">Soyad Giriniz</string>
    <string name="cinsiyet_giriniz">Cinsiyet giriniz</string>
    <string name="title_activity_main_diary">MainDiaryActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="tarih_seciniz">Tarih seçiniz</string>
    <string name="saat_seciniz">Saat seçiniz</string>
    <string name="deger_giriniz">Değer giriniz</string>
    <string name="kaydet">Kaydet</string>
    <string name="clear_all_data">clear_all_data</string>
    <string-array name="diary_array">
        <item>Regular insulin dose</item>
        <item>NPH insulin dose</item>
        <item>UltraLente insulin dose</item>
        <item>Unspecified blood glucose measurement</item>
        <item>Unspecified blood glucose measurement</item>
        <item>Pre-breakfast blood glucose measurement</item>
        <item>Post-breakfast blood glucose measurement</item>
        <item>Pre-lunch blood glucose measurement</item>
        <item>Post-lunch blood glucose measurement</item>
        <item>Pre-supper blood glucose measurement</item>
        <item>Post-supper blood glucose measurement</item>
        <item>Pre-snack blood glucose measurement</item>
        <item>Hypoglycemic symptoms</item>
        <item>Typical meal ingestion</item>
        <item>More-than-usual meal ingestion</item>
        <item>Less-than-usual meal ingestion</item>
        <item>Typical exercise activity</item>
        <item>Less-than-usual exercise activity</item>
        <item>Unspecified special event</item>
    </string-array>
    <string-array name="spinner_sikayet">
        <item>POLIÜRI</item>
        <item>POLIFAJI</item>
        <item>VAJINIT</item>
        <item>KARIN AĞRISI</item>
        <item>KABIZLIK</item>
        <item>POLIDIPSI</item>
        <item>KILO KAYBI</item>
        <item>HALSIZLIK</item>
        <item>GECE IDRAR KAÇIRMA / NOKTÜRI</item>
        <item>MANTAR ENFEKSIYONU</item>
        <item>KUSMA</item>
        <item>SOLUNUM SIKINTISI</item>
    </string-array>
    <string name="title_activity_doctor">DoctorActivity</string>
    <string name="title_activity_muayene">Muayene</string>
    <string name="bir_sikayet_olustur">Bir şikayet oluştur</string>

</resources>
